Chore: Migrate PSML TOC test classes to JUnit 5