@@ -1,109 +1,111 @@
 package org.pageseeder.psml.toc;
 
+import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.pageseeder.psml.toc.Tests.*;
 
-import org.junit.Assert;
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 
-import java.io.IOException;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertSame;
+
 import java.util.Arrays;
 import java.util.List;
 
-public final class DocumentTreeTest {
+final class DocumentTreeTest {
 
   @Test
-  public void testEmpty() {
+  void testEmpty() {
     DocumentTree tree = new DocumentTree.Builder(123).build();
-    Assert.assertEquals(123, tree.id());
-    Assert.assertEquals(0, tree.level());
-    Assert.assertEquals(0, tree.listReverseReferences().size());
-    Assert.assertEquals(0, tree.listForwardReferences().size());
-    Assert.assertEquals(0, tree.parts().size());
+    assertEquals(123, tree.id());
+    assertEquals(0, tree.level());
+    assertEquals(0, tree.listReverseReferences().size());
+    assertEquals(0, tree.listForwardReferences().size());
+    assertEquals(0, tree.parts().size());
   }
 
-  @Test(expected = IllegalArgumentException.class)
-  public void testBadID() {
-    new DocumentTree.Builder(-1).build();
+  @Test
+  void testBadID() {
+    assertThrows(IllegalArgumentException.class, () -> new DocumentTree.Builder(-1).build());
   }
 
   // Building
   // --------------------------------------------------------------------------
 
   @Test
-  public void testMinimal() {
+  void testMinimal() {
     DocumentTree tree = new DocumentTree.Builder(123L)
         .title("Hello")
         .build();
-    Assert.assertEquals(123, tree.id());
-    Assert.assertEquals("Hello", tree.title());
-    Assert.assertEquals(0, tree.level());
-    Assert.assertEquals(0, tree.listReverseReferences().size());
-    Assert.assertEquals(0, tree.listForwardReferences().size());
-    Assert.assertEquals(0, tree.parts().size());
+    assertEquals(123, tree.id());
+    assertEquals("Hello", tree.title());
+    assertEquals(0, tree.level());
+    assertEquals(0, tree.listReverseReferences().size());
+    assertEquals(0, tree.listForwardReferences().size());
+    assertEquals(0, tree.parts().size());
   }
 
   @Test
-  public void testHeading() {
+  void testHeading() {
     DocumentTree tree = new DocumentTree.Builder(123L)
         .title("Hello")
         .part(h1("A", "1", 1))
         .build();
-    Assert.assertEquals(123, tree.id());
-    Assert.assertEquals("Hello", tree.title());
-    Assert.assertEquals(1, tree.level());
-    Assert.assertEquals(0, tree.listReverseReferences().size());
-    Assert.assertEquals(0, tree.listForwardReferences().size());
-    Assert.assertEquals(1, tree.parts().size());
+    assertEquals(123, tree.id());
+    assertEquals("Hello", tree.title());
+    assertEquals(1, tree.level());
+    assertEquals(0, tree.listReverseReferences().size());
+    assertEquals(0, tree.listForwardReferences().size());
+    assertEquals(1, tree.parts().size());
   }
 
   @Test
-  public void testHeadings() {
+  void testHeadings() {
     DocumentTree tree = new DocumentTree.Builder(123L)
         .title("Hello")
         .part(h1("A", "1", 1))
         .part(h1("B", "1", 1))
         .part(h1("C", "1", 1))
         .build();
-    Assert.assertEquals(123, tree.id());
-    Assert.assertEquals("Hello", tree.title());
-    Assert.assertEquals(1, tree.level());
-    Assert.assertEquals(0, tree.listReverseReferences().size());
-    Assert.assertEquals(0, tree.listForwardReferences().size());
-    Assert.assertEquals(3, tree.parts().size());
+    assertEquals(123, tree.id());
+    assertEquals("Hello", tree.title());
+    assertEquals(1, tree.level());
+    assertEquals(0, tree.listReverseReferences().size());
+    assertEquals(0, tree.listForwardReferences().size());
+    assertEquals(3, tree.parts().size());
   }
 
   @Test
-  public void testReference() {
+  void testReference() {
     DocumentTree tree = new DocumentTree.Builder(123L)
         .title("Hello")
         .part(Tests.ref(1, "Test", 123L))
         .build();
-    Assert.assertEquals(123, tree.id());
-    Assert.assertEquals("Hello", tree.title());
-    Assert.assertEquals(0, tree.level());
-    Assert.assertEquals(0, tree.listReverseReferences().size());
-    Assert.assertEquals(1, tree.listForwardReferences().size());
-    Assert.assertEquals(1, tree.parts().size());
+    assertEquals(123, tree.id());
+    assertEquals("Hello", tree.title());
+    assertEquals(0, tree.level());
+    assertEquals(0, tree.listReverseReferences().size());
+    assertEquals(1, tree.listForwardReferences().size());
+    assertEquals(1, tree.parts().size());
   }
 
   @Test
-  public void testReferences() {
+  void testReferences() {
     DocumentTree tree = new DocumentTree.Builder(123L)
         .title("Hello")
         .part(ref(1, "Test #1", 100L))
         .part(ref(1, "Test #2", 101L))
         .part(ref(1, "Test #3", 102L))
         .build();
-    Assert.assertEquals(123, tree.id());
-    Assert.assertEquals("Hello", tree.title());
-    Assert.assertEquals(0, tree.level());
-    Assert.assertEquals(0, tree.listReverseReferences().size());
-    Assert.assertEquals(3, tree.listForwardReferences().size());
-    Assert.assertEquals(3, tree.parts().size());
+    assertEquals(123, tree.id());
+    assertEquals("Hello", tree.title());
+    assertEquals(0, tree.level());
+    assertEquals(0, tree.listReverseReferences().size());
+    assertEquals(3, tree.listForwardReferences().size());
+    assertEquals(3, tree.parts().size());
   }
 
   @Test
-  public void testMix() {
+  void testMix() {
     DocumentTree tree = new DocumentTree.Builder(123L)
         .title("Hello")
         .part(h1("A", "1", 1))
@@ -113,16 +115,16 @@ public final class DocumentTreeTest {
         .part(h1("C", "1", 1))
         .part(ref(1, "Test #3", 102L))
         .build();
-    Assert.assertEquals(123, tree.id());
-    Assert.assertEquals("Hello", tree.title());
-    Assert.assertEquals(1, tree.level());
-    Assert.assertEquals(0, tree.listReverseReferences().size());
-    Assert.assertEquals(3, tree.listForwardReferences().size());
-    Assert.assertEquals(6, tree.parts().size());
+    assertEquals(123, tree.id());
+    assertEquals("Hello", tree.title());
+    assertEquals(1, tree.level());
+    assertEquals(0, tree.listReverseReferences().size());
+    assertEquals(3, tree.listForwardReferences().size());
+    assertEquals(6, tree.parts().size());
   }
 
   @Test
-  public void testBasic() {
+  void testBasic() {
     Part<Heading> p1 = h1("A", "1", 1, h2("x", "2", 2), h2("y", "2", 2));
     Part<Heading> p2 = h1("B", "3", 2);
 
@@ -134,55 +136,55 @@ public final class DocumentTreeTest {
         .part(p2)
         .part(ref(1, "Test #3", 102L))
         .build();
-    Assert.assertEquals(123, tree.id());
-    Assert.assertEquals("Hello", tree.title());
-    Assert.assertEquals(1, tree.level());
-    Assert.assertEquals(1, tree.listForwardReferences().size());
-    Assert.assertEquals(2, tree.listReverseReferences().size());
-    Assert.assertEquals("7,8", tree.toReverseReferencesString(","));
-    Assert.assertEquals(3, tree.parts().size());
+    assertEquals(123, tree.id());
+    assertEquals("Hello", tree.title());
+    assertEquals(1, tree.level());
+    assertEquals(1, tree.listForwardReferences().size());
+    assertEquals(2, tree.listReverseReferences().size());
+    assertEquals("7,8", tree.toReverseReferencesString(","));
+    assertEquals(3, tree.parts().size());
   }
 
   // Level
   // --------------------------------------------------------------------------
 
   @Test
-  public void testLevel_0() throws IOException {
+  void testLevel_0() {
     DocumentTree tree = new DocumentTree.Builder(123L, "T").build();
-    Assert.assertEquals(0, tree.level());
+    assertEquals(0, tree.level());
   }
 
   @Test
-  public void testLevel_1() throws IOException {
+  void testLevel_1() {
     DocumentTree tree = new DocumentTree.Builder(123L, "T").part(h1("A", "1", 1)).build();
-    Assert.assertEquals(1, tree.level());
+    assertEquals(1, tree.level());
   }
 
   @Test
-  public void testLevel_1R() throws IOException {
+  void testLevel_1R() {
     DocumentTree tree = new DocumentTree.Builder(123L, "T").part(ref(1, "A", 100L)).build();
-    Assert.assertEquals(0, tree.level());
+    assertEquals(0, tree.level());
   }
 
   @Test
-  public void testLevel_2() throws IOException {
+  void testLevel_2() {
     DocumentTree tree = new DocumentTree.Builder(123L, "T").part(h2("A", "1", 1)).build();
-    Assert.assertEquals(2, tree.level());
+    assertEquals(2, tree.level());
   }
 
   // Normalization
   // --------------------------------------------------------------------------
 
   @Test
-  public void testNormalize_empty() throws IOException {
+  void testNormalize_empty() {
     DocumentTree tree = new DocumentTree.Builder(123L, "T").build();
-    Assert.assertSame(tree, tree.normalize(TitleCollapse.auto));
-    Assert.assertSame(tree, tree.normalize(TitleCollapse.never));
-    Assert.assertSame(tree, tree.normalize(TitleCollapse.always));
+    assertSame(tree, tree.normalize(TitleCollapse.auto));
+    assertSame(tree, tree.normalize(TitleCollapse.never));
+    assertSame(tree, tree.normalize(TitleCollapse.always));
   }
 
   @Test
-  public void testNormalize_Phantom1() throws IOException {
+  void testNormalize_Phantom1() {
     DocumentTree tree = new DocumentTree.Builder(123L, "T").part(phantom(1, h2("A", "1", 1))).build();
     DocumentTree exp = new DocumentTree.Builder(123L, "T").part(h2("A", "1", 1)).build();
     Tests.assertDocumentTreeEquals(exp, tree.normalize(TitleCollapse.auto));
@@ -190,7 +192,7 @@ public final class DocumentTreeTest {
   }
 
   @Test
-  public void testNormalize_Phantom2() throws IOException {
+  void testNormalize_Phantom2() {
     DocumentTree tree = new DocumentTree.Builder(123L, "T").part(phantom(1, phantom(2, h3("A", "1", 1)))).build();
     DocumentTree exp = new DocumentTree.Builder(123L, "T").part(h3("A", "1", 1)).build();
     Tests.assertDocumentTreeEquals(exp, tree.normalize(TitleCollapse.auto));
@@ -198,7 +200,7 @@ public final class DocumentTreeTest {
   }
 
   @Test
-  public void testNormalize_Phantom3() throws IOException {
+  void testNormalize_Phantom3() {
     DocumentTree tree = new DocumentTree.Builder(123L, "T").part(phantom(1, phantom(2, phantom(3, h4("A", "1", 1))))).build();
     DocumentTree exp = new DocumentTree.Builder(123L, "T").part(h4("A", "1", 1)).build();
     Tests.assertDocumentTreeEquals(exp, tree.normalize(TitleCollapse.never));
@@ -206,7 +208,7 @@ public final class DocumentTreeTest {
   }
 
   @Test
-  public void testSingleFragmentTree() throws IOException {
+  void testSingleFragmentTree() {
     DocumentTree tree = new DocumentTree.Builder(1).title("Y")
       .part(
         h1("Y", "1", 1,
@@ -236,7 +238,7 @@ public final class DocumentTreeTest {
   }
 
   @Test
-  public void testSingleFragmentTree2() throws IOException {
+  void testSingleFragmentTree2() {
     DocumentTree tree = new DocumentTree.Builder(1).title("Y")
       .part(
           h1("a", "1", 2,
@@ -265,7 +267,7 @@ public final class DocumentTreeTest {
   }
 
   @Test
-  public void testNormalize_none() throws IOException {
+  void testNormalize_none() {
     Part<Heading> p1 = h1("I", "1", 1,
                          h2("A", "1", 2),
                          h2("B", "1", 3));
@@ -274,11 +276,11 @@ public final class DocumentTreeTest {
         .part(p1)
         .part(p2)
         .build();
-    Assert.assertSame(tree, tree.normalize(TitleCollapse.auto));
+    assertSame(tree, tree.normalize(TitleCollapse.auto));
   }
 
   @Test
-  public void testNormalize_1() throws IOException {
+  void testNormalize_1() {
     Part<Heading> p1 = h1("Hello", "1", 1);
     Part<Heading> p2 = h1("I", "2", 2, h2("A", "2", 3), h2("B", "2", 2));
     Part<Heading> p3 = h1("II", "2", 5, h2("A", "2", 6), h2("B", "2", 7));
@@ -288,12 +290,12 @@ public final class DocumentTreeTest {
         .part(p3)
         .build();
     DocumentTree normalized = tree.normalize(TitleCollapse.auto);
-    Assert.assertEquals(3, tree.parts().size());
-    Assert.assertEquals(3, normalized.parts().size());
+    assertEquals(3, tree.parts().size());
+    assertEquals(3, normalized.parts().size());
   }
 
   @Test
-  public void testNormalize_2() throws IOException {
+  void testNormalize_2() {
     Part<Heading> p1 = h1("Hello", "1", 1,
                          h2("I", "2", 2,
                            h3("A", "2", 3),
@@ -305,37 +307,37 @@ public final class DocumentTreeTest {
         .part(p1)
         .build();
     DocumentTree normalized = tree.normalize(TitleCollapse.auto);
-    Assert.assertEquals(1, tree.parts().size());
-    Assert.assertEquals(2, normalized.parts().size());
-    Assert.assertEquals(DocumentTree.NO_BLOCK_LABEL, normalized.blocklabel());
+    assertEquals(1, tree.parts().size());
+    assertEquals(2, normalized.parts().size());
+    assertEquals(DocumentTree.NO_BLOCK_LABEL, normalized.blocklabel());
   }
 
   @Test
-  public void testNormalize_3() throws IOException {
+  void testNormalize_3() {
     Part<Phantom> p1 = phantom(1, phantom(2, h3("Hola", "1", 3)));
     DocumentTree tree = new DocumentTree.Builder(123L, "Hello!").part(p1).build();
     DocumentTree normalized = tree.normalize(TitleCollapse.auto);
-    Assert.assertEquals(1, tree.parts().size());
-    Assert.assertEquals(1, tree.parts().get(0).level());
-    Assert.assertEquals(Element.NO_TITLE, tree.parts().get(0).title());
-    Assert.assertEquals(1, normalized.parts().size());
-    Assert.assertEquals(3, normalized.parts().get(0).level());
-    Assert.assertEquals("Hola", normalized.parts().get(0).title());
+    assertEquals(1, tree.parts().size());
+    assertEquals(1, tree.parts().get(0).level());
+    assertEquals(Element.NO_TITLE, tree.parts().get(0).title());
+    assertEquals(1, normalized.parts().size());
+    assertEquals(3, normalized.parts().get(0).level());
+    assertEquals("Hola", normalized.parts().get(0).title());
   }
 
   @Test
-  public void testNormalize_4() throws IOException {
+  void testNormalize_4() {
     Part<Phantom> p1 = phantom(1, phantom(2, h3("Hello!", "1", 3)));
     DocumentTree tree = new DocumentTree.Builder(123L, "Hello!").part(p1).build();
     DocumentTree normalized = tree.normalize(TitleCollapse.auto);
-    Assert.assertEquals(1, tree.parts().size());
-    Assert.assertEquals(1, tree.parts().get(0).level());
-    Assert.assertEquals(Element.NO_TITLE, tree.parts().get(0).title());
-    Assert.assertEquals(0, normalized.parts().size());
+    assertEquals(1, tree.parts().size());
+    assertEquals(1, tree.parts().get(0).level());
+    assertEquals(Element.NO_TITLE, tree.parts().get(0).title());
+    assertEquals(0, normalized.parts().size());
   }
 
   @Test
-  public void testNormalize_5() throws IOException {
+  void testNormalize_5() {
     Part<Heading> p1 = heading(1, "Hello", "1", 1, "myblock",
                          h2("I", "2", 2,
                            h3("A", "2", 3),
@@ -347,54 +349,54 @@ public final class DocumentTreeTest {
         .part(p1)
         .build();
     DocumentTree normalized = tree.normalize(TitleCollapse.auto);
-    Assert.assertEquals(1, tree.parts().size());
-    Assert.assertEquals(2, normalized.parts().size());
-    Assert.assertEquals("myblock", normalized.blocklabel());
+    assertEquals(1, tree.parts().size());
+    assertEquals(2, normalized.parts().size());
+    assertEquals("myblock", normalized.blocklabel());
   }
 
   // Forward references
   // --------------------------------------------------------------------------
 
   @Test
-  public void testListForwardReferences_zero() throws IOException {
+  void testListForwardReferences_zero() {
     Part<Heading> p1 = h1("Hello", "1", 1);
     DocumentTree tree = new DocumentTree.Builder(123L, "Hello")
         .part(p1)
         .build();
-    Assert.assertEquals(0, tree.listForwardReferences().size());
+    assertEquals(0, tree.listForwardReferences().size());
   }
 
   @Test
-  public void testListForwardReferences_one() throws IOException {
+  void testListForwardReferences_one() {
     Part<Heading> p1 = h1("Hello", "1", 1);
     Part<Reference> p2 = ref(1, "Test #1", 100L);
     DocumentTree tree = new DocumentTree.Builder(123L, "Hello")
         .part(p1)
         .part(p2)
         .build();
-    Assert.assertEquals(Arrays.asList(100L), tree.listForwardReferences());
+    assertEquals(List.of(100L), tree.listForwardReferences());
   }
 
   @Test
-  public void testListForwardReferences_deep() throws IOException {
+  void testListForwardReferences_deep() {
     Part<Heading> p1 = h1("Hello", "1", 1, ref(2, "Test #1", 100L));
     DocumentTree tree = new DocumentTree.Builder(123L, "Hello")
         .part(p1)
         .build();
-    Assert.assertEquals(Arrays.asList(100L), tree.listForwardReferences());
+    assertEquals(List.of(100L), tree.listForwardReferences());
   }
 
   @Test
-  public void testListForwardReferences_deeper() throws IOException {
+  void testListForwardReferences_deeper() {
     Part<Heading> p1 = h1("Hello", "1", 1, phantom(2, phantom(3, ref(4, "Test #1", 100L), ref(4, "Test #2", 101L))));
     DocumentTree tree = new DocumentTree.Builder(123L, "Hello")
         .part(p1)
         .build();
-    Assert.assertEquals(Arrays.asList(100L, 101L), tree.listForwardReferences());
+    assertEquals(Arrays.asList(100L, 101L), tree.listForwardReferences());
   }
 
   @Test
-  public void testListForwardReferences_full() throws IOException {
+  void testListForwardReferences_full() {
     Part<Heading> p1 = Tests.h1("Hello", "1", 1);
     Part<Heading> p2 = Tests.h1("I", "2", 2,
                  Tests.ref(2, "2", 100),
@@ -416,7 +418,7 @@ public final class DocumentTreeTest {
         .build();
 
     List<Long> exp = Arrays.asList(100L, 101L, 102L, 103L, 104L, 105L, 106L, 107L);
-    Assert.assertEquals(exp, tree.listForwardReferences());
+    assertEquals(exp, tree.listForwardReferences());
   }
 
 }
